Wrap signoff comment (fixes #490) (#522)

--- a/css/plugins/signoff/styles.css
+++ b/css/plugins/signoff/styles.css
@@ -44,4 +44,5 @@
   display: block;
   overflow: auto;
   max-height: 4em;
+  white-space: pre-line;
 }
